# finNN_code

./: .gitignore  README.md  bm_job.slurm  gpu_test.py  job1.slurm  job2.slurm  job_cnn.slurm  job_lstm.slurm  job_mlp.slurm  job_snr.slurm  job_tran.slurm  job_transformer.slurm  paths.py  pyproject.toml  ssh_guide.md  todo.md  train_job.sh  train_job.slurm
data/: crsp_voo.csv  data_analysis.ipynb  get_data.ipynb
logs/: slurm_5302838.err  slurm_5302838.out  slurm_5302849.err  slurm_5302849.out  slurm_5306378.err  slurm_5306378.out  slurm_5307733.err  slurm_5307733.out
notebooks/: price_regression.ipynb
pipeline/: pipeline_test.ipynb  preprocessing.py  walkforward.py
src/: debug.ipynb  run_experiments.py
src/benchmarks/: README.md  benchmark.py  compare_runs.ipynb  confint.csv  estimate_lambda_max.ipynb  forecast.ipynb  regressions.ipynb  results.py  results_tables.py  visuals.ipynb
src/config/: .prc_cnn.yaml.swo  .vol_lstm.yaml.swp  README.md  cnn_100_adam_lr_cnn_100_muon_icml.yaml  cnn_100_adam_lr_cnn_100_sgd.yaml  cnn_100_muon_icml_cnn_100_adam_lr.yaml  cnn_100_muon_icml_cnn_100_sgd.yaml  cnn_100_sgd_cnn_100_adam_lr.yaml  cnn_100_sgd_cnn_100_muon_icml.yaml  cnn_search.yaml  config_types.py  debug.yaml  debug_prc.yaml  debug_vol.yaml  default.yaml  example.yaml  interventions.py  lstm_100_adam_lr_lstm_100_muon_lr.yaml  lstm_100_adam_lr_lstm_100_sgd.yaml  lstm_100_muon_lr_lstm_100_adam_lr.yaml  lstm_100_muon_lr_lstm_100_sgd.yaml  lstm_100_sgd_lstm_100_adam_lr.yaml  lstm_100_sgd_lstm_100_muon_lr.yaml  lstm_best.yaml  lstm_intervention.yaml  lstm_search_1.yaml  lstm_search_2.yaml  make_noise_yaml.py  make_seeds_yaml.py  mlp_100_adam_lr_mlp_100_muon_lr.yaml  mlp_100_adam_lr_mlp_100_sgd.yaml  mlp_100_muon_lr_mlp_100_adam_lr.yaml  mlp_100_muon_lr_mlp_100_sgd.yaml  mlp_100_sgd_mlp_100_adam_lr.yaml  mlp_100_sgd_mlp_100_muon_lr.yaml  (+21 more)
utils/: custom_formatter.py
(+3985 files in other folders)
