[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finNN_code"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = ["pipeline", "data", "training_price_prediction", "utils"]    # subpackages (they must have __init__.py)
py-modules = ["paths", "gpu_test"]              # top-level paths.py becomes importable
