[project]
name = "finNN_code"
version = "0.1.0"
description = "Neural network training pipeline for financial time series"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
  "torch",
  "scikit-learn",
  "tensorflow",
  "optuna",
  "tqdm",
  "statsmodels",
  "pyyaml",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "models*",
  "config*",
  "hyperparams_search*",
  "pipeline*",
  "price_prediction*",
  "training_routine*",
  "utils*",
]
